src/document_core/snapshots/rhwp__document_core__tests__form_002_compatibility_report.snap
---
source: src/document_core/mod.rs
expression: report
---
{
  "editMode": "protected-view",
  "issues": [
    {
      "code": "font-substitution",
      "message": "Layout may differ if required Hancom fonts are missing on this system.",
      "severity": "warning"
    },
    {
      "code": "hwpx-form",
      "message": "Paragraph 0 in section 0 uses form controls that are not written to HWPX yet.",
      "severity": "blocker"
    },
    {
      "code": "hwpx-form",
      "message": "Paragraph 2 in section 0 uses form controls that are not written to HWPX yet.",
      "severity": "blocker"
    },
    {
      "code": "hwpx-form",
      "message": "Paragraph 3 in section 0 uses form controls that are not written to HWPX yet.",
      "severity": "blocker"
    },
    {
      "code": "hwpx-form",
      "message": "Paragraph 4 in section 0 uses form controls that are not written to HWPX yet.",
      "severity": "blocker"
    },
    {
      "code": "hwpx-form",
      "message": "Paragraph 5 in section 0 uses form controls that are not written to HWPX yet.",
      "severity": "blocker"
    }
  ],
  "preferredSaveFormat": "hwpx",
  "sourceFormat": "hwpx"
}
