src/document_core/snapshots/rhwp__document_core__tests__hyperlink_field_compatibility_report.snap
---
source: src/document_core/mod.rs
expression: report
---
{
  "editMode": "editable-safe",
  "issues": [],
  "preferredSaveFormat": "hwpx",
  "sourceFormat": "hwpx"
}
