src/document_core/snapshots/rhwp__document_core__tests__preserved_hyperlink_compatibility_report.snap
---
source: src/document_core/mod.rs
expression: report
---
{
  "editMode": "editable-safe",
  "issues": [
    {
      "code": "hwpx-hyperlink",
      "message": "Paragraph 0 in section 0 uses hyperlink controls that are not written to HWPX yet.",
      "severity": "warning"
    }
  ],
  "preferredSaveFormat": "hwpx",
  "sourceFormat": "hwpx"
}
