src/document_core/snapshots/rhwp__document_core__tests__table_vpos_preservation_compatibility_report.snap
---
source: src/document_core/mod.rs
expression: report
---
{
  "editMode": "editable-safe",
  "issues": [
    {
      "code": "font-substitution",
      "message": "Layout may differ if required Hancom fonts are missing on this system.",
      "severity": "warning"
    },
    {
      "code": "hwpx-field-missing-range",
      "message": "Paragraph 4 in section 0 has a field control without a tracked text range.",
      "severity": "warning"
    },
    {
      "code": "hwpx-char-overlap",
      "message": "Paragraph 34 in section 0 uses character-overlap controls that are not written to HWPX yet.",
      "severity": "warning"
    }
  ],
  "preferredSaveFormat": "hwpx",
  "sourceFormat": "hwpx"
}
