src/document_core/snapshots/rhwp__document_core__tests__tac_img_wave2_compatibility_report.snap
---
source: src/document_core/mod.rs
expression: report
---
{
  "editMode": "editable-safe",
  "issues": [
    {
      "code": "font-substitution",
      "message": "Layout may differ if required Hancom fonts are missing on this system.",
      "severity": "warning"
    },
    {
      "code": "hwpx-section-page-border-fill",
      "message": "Section 0 uses page border/fill settings that are not written to HWPX yet.",
      "severity": "warning"
    },
    {
      "code": "hwpx-section-extra-records",
      "message": "Section 0 carries extra section records that are not preserved in HWPX yet.",
      "severity": "warning"
    }
  ],
  "preferredSaveFormat": "hwpx",
  "sourceFormat": "hwpx"
}
